--- a/Code/gt_backend/client/public/index.html
+++ b/Code/gt_backend/client/public/index.html
@@ -25,6 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" type="text/css" />
     <title>Zoom Class</title>
   </head>
   <body>
