--- a/Code/gt_backend/client/public/index.html
+++ b/Code/gt_backend/client/public/index.html
@@ -28,7 +28,7 @@
     <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" type="text/css" />
     <title>Zoom Class</title>
   </head>
-  <body>
+  <body style="overflow: scroll;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
