--- a/Code/gt_backend/client/public/index.html
+++ b/Code/gt_backend/client/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://kit.fontawesome.com/2eaa5d7b87.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/2eaa5d7b87.js" crossorigin="anonymous"></script> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,10 +25,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://cdn.syncfusion.com/ej2/material.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <title>Zoom Class</title>
   </head>
-  <body style="overflow: scroll;">
+  <body style="overflow: scroll">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
