--- a/Code/gt_backend/client/public/index.html
+++ b/Code/gt_backend/client/public/index.html
@@ -30,6 +30,17 @@
       rel="stylesheet"
       type="text/css"
     />
+
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="node_modules/@zoomus/websdk/dist/css/bootstrap.css"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="node_modules/@zoomus/websdk/dist/css/react-select.css"
+    />
     <title>Zoom Class</title>
   </head>
   <body style="overflow: scroll">
